# just-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  PR5_FIX_DOCUMENTATION.md  README.md  RMCP_SYNTAX_FIXES.md  TODO.pm  cog.toml  justfile  server.json
.github/workflows/: ci.yml  release.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
examples/: mcp_server_demo.rs
integration_test/: hello.py  pyproject.toml
just-mcp-lib/: Cargo.toml
just-mcp-lib/src/: environment.rs  executor.rs  lib.rs  mcp_server.rs  parser.rs  registry.rs  validator.rs
just-mcp-lib/test-fixtures/: simple.justfile
npm/: package.json
pkgx/: SETUP-GUIDE.md
scripts/: update-server-json-version.sh
src/: main.rs
test-fixtures/: sample.justfile
tests/: basic_mcp_test.rs  cli_smoke_test.rs  environment_test.rs  executor_test.rs  integration_test.rs  mcp_integration_test.rs  mcp_integration_working.rs  mcp_server_test.rs  test_hello_with_parameter.rs  validator_test.rs
