[workspace]
members = ["just-mcp-lib"]

[package]
name = "just-mcp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "just-mcp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
just-mcp-lib = { version = "0.1.0", path = "just-mcp-lib" }
rmcp = { version = "0.3.0", features = ["client", "transport-child-process"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
snafu = "0.8.6"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
