[package]
name = "just-mcp-lib"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
rmcp = { version = "0.3.0", features = ["server", "macros", "transport-io", "schemars", "uuid"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
snafu = "0.8.6"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
tempfile = "3.20.0"
